--- a/example.docker-compose.yml
+++ b/example.docker-compose.yml
@@ -1,17 +1,14 @@
 version: "2"
 services:
-
   pwn:
     build:
       context: .
       dockerfile: example.Dockerfile
-    image: ctftraining/pwn_test
+    image: ctfhub/pwn_test
     volumes:
       - ./tcpdump:/var/lib/tcpdump
     ports:
-      - "10001:10000"
+      - "10000:10000"
     environment:
-      - FLAG=ctftraining{base_pwn_xinetd}
+      - FLAG=ctfhub{base_pwn_xinetd}
       - TCPDUMP_ENABLE=1
-    depends_on:
-      - base_pwn
